--- a/popcorn-time/tsconfig.app.json
+++ b/popcorn-time/tsconfig.app.json
@@ -21,5 +21,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "components"]
+  "include": ["src", "src/components"]
 }
